--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -4,7 +4,8 @@
   "description": "0x01-ES6_promise",
   "main": "0-main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node 0-main.js"
   },
   "keywords": [],
   "author": "",
