--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "0x01-ES6_promise",
   "main": "0-main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 0-main.js"
