--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node 0-main.js"
+    "dev": "node $npm_config_file"
   },
   "keywords": [],
   "author": "",
