--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node $npm_config_file"
+    "dev": "cross-env node $npm_config_file"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
