--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -21,10 +21,9 @@
   },
   "homepage": "https://github.com/mansouriyassine/0x01-es6_promise#readme",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "eslint": "^7.30.0",
-    "cross-env": "^7.0.3"
-  },
-  "dependencies": {}
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0"
+  }
 }
