--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "0x01-es6_promise",
-  "version": "1.0.0",
-  "description": "Project for ES6 Promises by Yassine Mansouri",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
-    "dev": "node $npm_config_file",
-    "build": "babel src -d dist"
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "dev": "npx babel-node",
+    "test": "jest",
+    "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mansouriyassine/0x01-es6_promise.git"
-  },
-  "author": "Yassine Mansouri",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mansouriyassine/0x01-es6_promise/issues"
-  },
-  "homepage": "https://github.com/mansouriyassine/0x01-es6_promise#readme",
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.32.0"
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.8.0",
+    "@babel/preset-env": "^7.6.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "jest": "^24.9.0"
   }
 }
