--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,29 +1,19 @@
 {
-	  "name": "0x00-ES6_basic",
-	    "version": "1.0.0",
-	      "description": "0x00-ES6_basic",
-	        "type": "module",
-		  "main": "0-constants.js",
-		    "scripts": {
-			        "test": "jest",
-				    "lint": "eslint .",
-				        "dev": "node 0-main.js"
-					  },
-					    "keywords": [],
-					      "author": "",
-					        "license": "ISC",
-						  "devDependencies": {
-							      "@babel/core": "^7.24.4",
-							          "@babel/preset-env": "^7.24.4",
-								      "@eslint/eslintrc": "^3.0.2",
-								          "@eslint/js": "^9.0.0",
-									      "babel-jest": "^29.7.0",
-									          "eslint": "^8.57.0",
-										      "eslint-config-standard": "^17.1.0",
-										          "eslint-plugin-import": "^2.29.1",
-											      "eslint-plugin-n": "^16.6.2",
-											          "eslint-plugin-promise": "^6.1.1",
-												      "globals": "^15.0.0",
-												          "jest": "^29.7.0"
-													    }
-}
+	"scripts": {
+	  "lint": "./node_modules/.bin/eslint",
+	  "check-lint": "lint [0-9]*.js",
+	  "dev": "npx babel-node",
+	  "test": "jest",
+	  "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
+	},
+	"devDependencies": {
+	  "@babel/core": "^7.6.0",
+	  "@babel/node": "^7.8.0",
+	  "@babel/preset-env": "^7.6.0",
+	  "eslint": "^6.4.0",
+	  "eslint-config-airbnb-base": "^14.0.0",
+	  "eslint-plugin-import": "^2.18.2",
+	  "eslint-plugin-jest": "^22.17.0",
+	  "jest": "^24.9.0"
+	}
+  }
