--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -4,29 +4,29 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "lint": "./node_modules/.bin/eslint",
-        "check-lint": "lint [0-9]*.js",
-        "test": "./node_modules/mocha/bin/mocha --require babel-register --exit",
-        "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv"
+      "lint": "./node_modules/.bin/eslint",
+      "check-lint": "lint [0-9]*.js",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "nodemon --exec babel-node --presets babel-preset-env full_server/server.js ./database.csv"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chai-http": "^4.3.0",
-        "express": "^4.19.2",
-        "fs": "^0.0.1-security"
+      "babel-cli": "^6.26.0",
+      "babel-preset-env": "^1.7.0",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "chai": "^4.2.0",
-        "eslint": "^6.4.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^22.17.0",
-        "mocha": "^6.2.2",
-        "nodemon": "^2.0.2",
-        "request": "^2.88.0",
-        "sinon": "^7.5.0"
+      "babel-core": "^6.26.3",
+      "babel-eslint": "^10.0.3",
+      "babel-plugin-transform-runtime": "^6.23.0",
+      "babel-preset-es2015": "^6.24.1",
+      "babel-preset-stage-0": "^6.24.1",
+      "eslint": "^6.4.0",
+      "eslint-config-airbnb-base": "^14.0.0",
+      "eslint-plugin-import": "^2.18.2",
+      "nodemon": "^2.0.2"
     }
-}
+  }
+  
