--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -2,14 +2,15 @@
   "name": "0x06-unittests_in_js",
   "version": "1.0.0",
   "description": "0x06-unittests_in_js",
-  "main": "1-calcul.js",
+  "main": "2-calcul_chai.js",
   "scripts": {
-    "test": "mocha 0-calcul.test.js 1-calcul.test.js"
+    "test": "mocha 0-calcul.test.js 1-calcul.test.js 2-calcul_chai.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.4",
     "mocha": "^10.4.0"
   }
 }
